<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemDetailsFragment"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_peekHeight="270dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin">

        <ImageView
            android:id="@+id/browse_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_photo_24dp"
            android:scaleType="fitXY"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin">

        <TextView
            android:id="@+id/item_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:gravity="start"
            android:text="@string/item_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_margin"
            android:gravity="end"
            android:text="@string/item_price"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/moderateFeedbackColor"
            android:rating="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/item_rating"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/small_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/item_description" />

        <EditText
            android:id="@+id/item_details_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/item_description"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_to_checkout_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:text="@string/add_to_cart"
        android:onClick="onAddToCartButtonClicked"/>

</LinearLayout>