<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/browse_item_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:backgroundTint="@color/colorAccentLighter"
    android:padding="@dimen/small_margin"
    android:layout_marginTop="@dimen/medium_margin"
    android:layout_marginStart="@dimen/medium_margin"
    android:layout_marginEnd="@dimen/medium_margin">

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/border"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/browse_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/item_image"
            android:src="@drawable/ic_photo_24dp"
            android:scaleType="fitXY"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/browse_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/textColorPrimary"
        android:textStyle="italic"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/browse_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:text="@string/item_price"/>

</LinearLayout>
