<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:layout_marginTop="@dimen/small_margin">

    <LinearLayout
        android:id="@+id/shopping_cart_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/shopping_cart_item_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_shopping_cart_24dp"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/item_image"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/shopping_cart_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textStyle="italic"
            android:text="@string/item_name"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/small_margin"/>

    </LinearLayout>


    <TextView
        android:id="@+id/shopping_cart_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"
        android:text="@string/item_price"
        android:layout_marginEnd="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@id/shopping_cart_item_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
